--- a/src/app/SIRF/sirfsearch/sirfsearch.component.css
+++ b/src/app/SIRF/sirfsearch/sirfsearch.component.css
@@ -1,15 +1,14 @@
 .container {
     
-    max-width: 768px;
+    max-width: 900px;
     width: 100%;
   }
   
   .container-full-width {
-    width: 50%;
+    width: 40%;
+    padding-left: 20px;
+    padding-right: 40px;
   }
 
 
-  form-item{
-      display: inline;
-      width: 100px;
-  }
+  
