--- a/src/app/SIRF/sirfsearch/sirfsearch.component.html
+++ b/src/app/SIRF/sirfsearch/sirfsearch.component.html
@@ -1,11 +1,11 @@
-<form class="container" [formGroup]="sirfGroup" (ngSubmit)="search()" >
+<form class="container" [formGroup]="sirfGroup" (ngSubmit)="search()">
 
     <mat-card>
         <mat-form-field class="container-full-width">
-            <div class="form-item">                
+            <div class="form-item">
                 <input matInput placeholder="SIRF Number" formControlName="SIRFNumber">
             </div>
-        </mat-form-field>        
+        </mat-form-field>
 
         <mat-form-field class="container-full-width">
             <input matInput placeholder="Priority Level" formControlName="PriorityLevel">
@@ -31,15 +31,67 @@
 
 
         <div *ngIf="validationError">
-                <p class="text-danger">** {{validationMessage}}</p>
+            <p class="text-danger">** {{validationMessage}}</p>
         </div>
 
-       
-        <button type="submit" mat-raised-button>Search</button>      
+
+        <button type="submit" mat-raised-button>Search</button>
 
     </mat-card>
 
     <mat-card>
+        <table mat-table [dataSource]="searchResults" class="mat-elevation-z8">
+
+            <!--- Note that these columns can be defined in any order.
+                          The actual rendered columns are set as a property on the row definition" -->
+
+
+            <ng-container matColumnDef="SIRFNumber">
+                <th mat-header-cell *matHeaderCellDef> SIRF Number </th>
+                <td mat-cell *matCellDef="let element"> {{element.SIRFNumber}} </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="PriorityLevel">
+                <th mat-header-cell *matHeaderCellDef> PriorityLevel </th>
+                <td mat-cell *matCellDef="let element"> {{element.PriorityLevel}} </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="RequestCategory">
+                <th mat-header-cell *matHeaderCellDef> Request Category </th>
+                <td mat-cell *matCellDef="let element"> {{element.RequestCategory}} </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="BusinessRegion">
+                <th mat-header-cell *matHeaderCellDef> Business Region </th>
+                <td mat-cell *matCellDef="let element"> {{element.BusinessRegion}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="CustomerName">
+                <th mat-header-cell *matHeaderCellDef> Customer Name</th>
+                <td mat-cell *matCellDef="let element"> {{element.CustomerName}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="RequestedDate">
+                <th mat-header-cell *matHeaderCellDef> Requested Date</th>
+                <td mat-cell *matCellDef="let element"> {{element.RequestedDate}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="RequestedBy">
+                <th mat-header-cell *matHeaderCellDef> Requested By</th>
+                <td mat-cell *matCellDef="let element"> {{element.RequestedBy}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="RequestCompletionDate">
+                <th mat-header-cell *matHeaderCellDef> Completion Date </th>
+                <td mat-cell *matCellDef="let element"> {{element.RequestCompletionDate}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
 
     </mat-card>
 
