--- a/src/app/PRICING/product-details/product-details.component.css
+++ b/src/app/PRICING/product-details/product-details.component.css
@@ -11,11 +11,15 @@
   }
 
   .container-full-width {
-    width: 80%;
+    width: 80%;  
     padding-left: 20px;
     padding-right: 40px;
   }
 
-  .btn-add-product{
-      width: 200px;
+
+  textarea{
+    height: 100px;
   }
+
+
+  
