--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -1,39 +1,46 @@
 <form class="container" [formGroup]="pricingGroup">
 
     <mat-card>
-        <mat-form-field class="container-half-width" >
-            <div class="form-item">
-                <input matInput placeholder="Company Name" formControlName="CompanyName" required>
-             
-            </div>
+
+        <mat-form-field class="container-half-width">
+
+            <mat-label>Company Name</mat-label>
+            <mat-select name="lstCompanyName" formControlName="CompanyName" required (selectionChange)="companyname_change($event)">
+                    <mat-option>--</mat-option>
+                    <mat-option *ngFor="let company of companyNames" [value]="company" >
+                      {{company}}
+                    </mat-option>
+            </mat-select>
+
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
-            <!--
-                    
-                -->
+
             <mat-label>Priority Level</mat-label>
             <mat-select name="lstPriorityLevel" formControlName="PriorityLevel" required>
-                <mat-option value="high">High</mat-option>
-                <mat-option value="medium">Medium</mat-option>
+                <mat-option value="high">High</mat-option>               
                 <mat-option value="low">Low</mat-option>
             </mat-select>
-            
+
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
             <mat-label>Customer ID</mat-label>
-            <mat-select name="lstCustomerID" formControlName="CustomerID" required>
-                <mat-option value="1">Existing Product</mat-option>
-                <mat-option value="2">New Product</mat-option>
+            <mat-select name="lstCustomerID" formControlName="CustomerID" required (selectionChange)="customerID_change($event)" [(value)]="selectedCustomer">
+                    <mat-option>--</mat-option>
+                    <mat-option *ngFor="let customer of customerIDs" [value]="customer.id" >
+                      {{customer.name}}
+                    </mat-option>
             </mat-select>
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
             <mat-label>Customer Name</mat-label>
-            <mat-select name="lstCustomerName" formControlName="CustomerName" required>
-                <mat-option value="1">Existing Product</mat-option>
-                <mat-option value="2">New Product</mat-option>
+            <mat-select name="lstCustomerName" formControlName="CustomerName" required [(value)]="selectedCustomer">
+                    <mat-option>--</mat-option>
+                    <mat-option *ngFor="let customer of customerNames" [value]="customer.id" >
+                      {{customer.name}}
+                    </mat-option>
             </mat-select>
         </mat-form-field>
 
@@ -44,8 +51,8 @@
         <mat-form-field class="container-half-width">
             <mat-label>Opportunity Type</mat-label>
             <mat-select name="lstOpportunityType" formControlName="OpportunityType" required>
-                <mat-option value="1">Existing Product</mat-option>
-                <mat-option value="2">New Product</mat-option>
+                <mat-option value="Existing Product">Existing Product</mat-option>
+                <mat-option value="New Product">New Product</mat-option>
             </mat-select>
         </mat-form-field>
 
@@ -58,7 +65,8 @@
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
-            <input matInput [matDatepicker]="picker" placeholder="Submitted Date" formControlName="SubmittedDate" required>
+            <input matInput [matDatepicker]="picker" placeholder="Submitted Date" formControlName="SubmittedDate"
+                required>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
@@ -81,29 +89,29 @@
                 <button class="btn-add-product" mat-raised-button color="accent">Add Product</button>
             </mat-button-toggle-group>
 
-            
-        </div>  
+
+        </div>
     </mat-card>
     <mat-card>
-            <table mat-table [dataSource]="productResults" class="mat-elevation-z8">
-    
-              
-    
-                <ng-container matColumnDef="ProductCode">
-                    <th mat-header-cell *matHeaderCellDef> Product Code</th>
-                    <td mat-cell *matCellDef="let element"> {{element.ProductCode}} </td>
-                </ng-container>
+        <table mat-table [dataSource]="productResults" class="mat-elevation-z8">
 
-                <ng-container matColumnDef="Description">
-                        <th mat-header-cell *matHeaderCellDef> Description</th>
-                        <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
-                    </ng-container>
-    
-                
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-    
-        </mat-card>
+
+
+            <ng-container matColumnDef="ProductCode">
+                <th mat-header-cell *matHeaderCellDef> Product Code</th>
+                <td mat-cell *matCellDef="let element"> {{element.ProductCode}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Description">
+                <th mat-header-cell *matHeaderCellDef> Description</th>
+                <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+    </mat-card>
 
 </form>
