--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -5,7 +5,7 @@
         <mat-form-field class="container-half-width">
 
             <mat-label>Company Name</mat-label>
-            <mat-select name="lstCompanyName" formControlName="CompanyName" required (selectionChange)="companyname_change($event)">
+            <mat-select name="lstCompanyName" formControlName="CompanyName" required  [(value)]="selectedCompany">
                     <mat-option>--</mat-option>
                     <mat-option *ngFor="let company of companyNames" [value]="company" >
                       {{company}}
@@ -17,16 +17,16 @@
         <mat-form-field class="container-half-width">
 
             <mat-label>Priority Level</mat-label>
-            <mat-select name="lstPriorityLevel" formControlName="PriorityLevel" required>
-                <mat-option value="high">High</mat-option>               
-                <mat-option value="low">Low</mat-option>
+            <mat-select name="lstPriorityLevel" formControlName="PriorityLevel" required [(value)]="selectedPriority">
+                <mat-option value="High">High</mat-option>               
+                <mat-option value="Low">Low</mat-option>
             </mat-select>
 
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
             <mat-label>Customer ID</mat-label>
-            <mat-select name="lstCustomerID" formControlName="CustomerID" required (selectionChange)="customerID_change($event)" [(value)]="selectedCustomer">
+            <mat-select name="lstCustomerID" formControlName="CustomerID" required  [(value)]="selectedCustomer">
                     <mat-option>--</mat-option>
                     <mat-option *ngFor="let customer of customerIDs" [value]="customer.id" >
                       {{customer.name}}
@@ -45,12 +45,19 @@
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
-            <input matInput placeholder="Opportunity Owner" formControlName="OpportunityOwner" required>
+
+                <mat-label>Opportunity Owner</mat-label>
+                <mat-select name="lstOpportunityOwner" formControlName="OpportunityOwner" required [(value)]="selectedOwner">
+                        <mat-option>--</mat-option>
+                        <mat-option *ngFor="let owner of opportunityOwners" [value]="owner.name" >
+                          {{owner.name}}
+                        </mat-option>
+                </mat-select>            
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
             <mat-label>Opportunity Type</mat-label>
-            <mat-select name="lstOpportunityType" formControlName="OpportunityType" required>
+            <mat-select name="lstOpportunityType" formControlName="OpportunityType" required [(value)]="selectedOpportunityType"> 
                 <mat-option value="Existing Product">Existing Product</mat-option>
                 <mat-option value="New Product">New Product</mat-option>
             </mat-select>
@@ -82,14 +89,12 @@
 
 
         <div>
-            <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group" >
                 <mat-button-toggle color="warn" (click)="delete()">Delete</mat-button-toggle>
                 <mat-button-toggle (click)="save()">Save</mat-button-toggle>
                 <mat-button-toggle (click)="submit()">Submit</mat-button-toggle>
-                <button class="btn-add-product" mat-raised-button color="accent">Add Product</button>
+                <button class="btn-add-product float-right" mat-raised-button >Add Product</button>
             </mat-button-toggle-group>
-
-
         </div>
     </mat-card>
     <mat-card>
