--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -99,10 +99,12 @@
                     <mat-button-toggle color="warn" (click)="delete()">Delete</mat-button-toggle>
                     <mat-button-toggle (click)="save()">Save</mat-button-toggle>
                     <mat-button-toggle (click)="submit()">Submit</mat-button-toggle>
-                    <button class="btn-add-product float-right" mat-raised-button>Add Product</button>
+                    <button class="btn-add-product float-right" mat-raised-button (click)="addProduct()"
+                    [disabled]="!quoteSubmitted">Add Product</button>
                 </mat-button-toggle-group>
             </div>
         </mat-card>
+
         <mat-card>
             <table mat-table [dataSource]="productResults" class="mat-elevation-z8 product-lines-table">
 
@@ -122,11 +124,12 @@
                 <ng-container matColumnDef="Actions">
                     <th mat-header-cell *matHeaderCellDef> Actions</th>
                     <td mat-cell *matCellDef="let element">
-                        <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
-                            <mat-button-toggle>
-                                <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
+                        <mat-button-toggle-group #group="matButtonToggleGroup"  name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
+                            
+                            <mat-button-toggle [value]='element.lineID' (click)="lineEdit(element.lineID)">
+                                <mat-icon aria-hidden="false" aria-label="Example home icon"  >edit</mat-icon>
                             </mat-button-toggle>
-                            <mat-button-toggle>
+                            <mat-button-toggle [value]='element.lineID' (click)="lineDelete(element.lineID)">
                                 <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
                             </mat-button-toggle>
                         </mat-button-toggle-group>
@@ -142,8 +145,8 @@
         </mat-card>
 
 
-    <div *ngIf="1==0">
-    <app-product-details QuoteID="31108" QuoteLineID="47783" CompanyName="DA">
+    <div *ngIf="showProductDetails == true">
+    <app-product-details QuoteID="{{quoteID}}" QuoteLineID="{{quoteLineID}}" CompanyName="{{selectedCompany}}">
     </app-product-details>
 </div>
 
